2XXXXXX
	* email2trac.py:
	
	  - Added verbatim_format option default is: 1

2006-10-27

	* run_email2trac.c. 
	
	  - Setgid() must be called before setuid().
	  Reported by:  Anonymous
	  Fixed    by:  Bas van der Vlies

	* email2trac.py, 
	
	  - Fixed an error in Ticket Update. When ticket
	  does not exists, proceed as if it is a new ticket
	  Fixed    by:  Bas van der Vlies

	  - Fixed a strang bug in 0.9 version, if ticket update 
	  is enabled and email has attachment(s). We are not allowed to 
	  set the description and author field of the attachment else 
	  the comment text is lost ;-(
	  Fixed    by:  Bas van der Vlies

	  - Fixed an error if enable_syslog and drop_spam is set. We get
	  an exception in the syslog if we use sys.exit(0), replaced by
	  return.
	  Fixed    by:  Bas van der Vlies

	* delete_spam.py. 
	
	  - Trac version 0.10 made it easier to delete tickets.
	  Fixed    by:  Bas van der Vlies
	
2006-10-10
	* Fixed race conditions in delete_spam.py and added some 
	  debug code.
	  Fixed by   : Bas van der Vlies

	* Added author and description field when attachment is
	  added to ticket. This is for trac version greater than
	  0.8.
	  Fixed by   : Bas van der Vlies
	  Thanks to Matthew Good for the hint

	* Added drop_spam option, default = 0. If set then
	  mail marked as Spam is not accepted.
	  Added by   : Bas van der Vlies

	* Do not send notification if message is marked as Spam 
	  and drop_spam is not set.
	  Fixed by   : Bas van der Vlies

2006-10-02
	* Fixes possible segmentation faults in run_email2trac.c 
	  Reported by: bcornec
	  Fixed by   : Bas van der Vlies

	* Can set DEBUG level while configuring package, eg:
	  DEBUG=1 ./configure ( default : 0)
	  Reported by: syd at plug dot ca
	  Fixed By   : Bas van der Vlies

	* delete_spam.py did not delete everything from the SQL tables
	  Reported by: brent at rcfile dot org
	  Fixed by   : Bas van der Vlies

	* Do not send notification when message is marked as Spam