@@ -13,6 +13,7 @@ enable_syslog : 0
 alternate_notify_template :
 drop_spam : 0
 verbatim_format: 1
+strip_signatures: 1
 
 
 [bas]
